# tiago_blob_detection

./: CMakeLists.txt  package.xml
cfg/: logitech.yaml  rgb_xtion.yaml  tiago_blob_detection_params.cfg
launch/: blob_tracking.launch  blob_tracking_xtion..launch
src/: blob_detection.cpp
